--- a/singolo1.html
+++ b/singolo1.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <header class="header wrap">
+    
+    <header class="header">
+        <div class="wrap">
+
             <div class="header__position">
                 <a href="#" class="header__logo">singolo<span>*</span></a>
                 <nav class="header__nav">
@@ -36,27 +39,33 @@
                         </li>
                     </ul>
                 </nav>
-            </div>        
+            </div>
+
+        </div>
     </header>
+
     <main class="main">
-        <div class="wrap ">
-            <!-- Slider -->
-            <section class="slider">
+
+        <!-- Slider -->
+        <section class="slider">
+            <div class="slider__background wrap">
                 <img src="./assets/iPhone_Vertical.png" alt="image" class="slider__verticalphone">
                 <img src="./assets/iPhone_Horizontal.png" alt="image" class="slider__horizontalphone">
                 <ul class="slider__list">
                     <li class="slider__item"><i class="fas fa-chevron-left"></i></li>
                     <li class="slider__item"><i class="fas fa-chevron-right"></i></li>
                 </ul>
-            </section>
+            </div>
+        </section>
 
-            <!-- Info -->
-            <section class="info">
+        <!-- Info -->
+        <section class="info">
+            <div class="wrap">
                 <h1 class="info__title">Our Services</h1>
                 <p class="info__description">
-                    Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. 
-                    Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget 
-                    lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, 
+                    Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+                    Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
+                    lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
                     tortor mauris condimentum nibh.
                 </p>
                 <ul class="info__list">
@@ -65,8 +74,8 @@
                             <img class="info__icon" src="./assets/Pen.png" alt="icon">
                             <article class="info__article">
                                 <h2 class="article__title">Custom Design</h2>
-                                <p class="article__text">Curabitur vestibulum eget mauris 
-                                    quis laoreet. Phasellus in quam laoreet, viverra lacus 
+                                <p class="article__text">Curabitur vestibulum eget mauris
+                                    quis laoreet. Phasellus in quam laoreet, viverra lacus
                                     ut, ultrices velit.
                                 </p>
                             </article>
@@ -75,7 +84,7 @@
                             <img class="info__icon" src="./assets/Bulb.png" alt="icon">
                             <article class="info__article">
                                 <h2 class="article__title">Inovative Ideas</h2>
-                                <p class="article__text">Quisque luctus, quam eget molestie com-modo, 
+                                <p class="article__text">Quisque luctus, quam eget molestie com-modo,
                                     lacus purus cursus purus, nec rutrum tellus dolor id lorem.
                                 </p>
                             </article>
@@ -84,7 +93,7 @@
                             <img class="info__icon" src="./assets/Heart.png" alt="icon">
                             <article class="info__article">
                                 <h2 class="article__title">Love Is The Answer</h2>
-                                <p class="article__text">Nulla sed nunc et tortor luctus faucibus. 
+                                <p class="article__text">Nulla sed nunc et tortor luctus faucibus.
                                     Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
                                 </p>
                             </article>
@@ -115,7 +124,7 @@
                             <img class="info__icon" src="./assets/Star.png" alt="icon">
                             <article class="info__article">
                                 <h2 class="article__title">Feel Like A Star</h2>
-                                <p class="article__text">Quisque  hendrerit purus dapibus, 
+                                <p class="article__text">Quisque hendrerit purus dapibus,
                                     ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
                                 </p>
                             </article>
@@ -123,14 +132,14 @@
                     </ul>
                 </ul>
 
-            
-
-            </section>
+            </div>
 
 
 
-        </div>
-    </main>    
+
+        </section>
+
+    </main>
 
 
     <script src="https://kit.fontawesome.com/141fb5db1e.js" crossorigin="anonymous"></script>
