feat: portfolio-section done

--- a/singolo2.html
+++ b/singolo2.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <main class="main">
+        <!-- Portfolio -->
         <section class="portfolio">
             <div class="wrap">
                 <div class="portfolio_position">
                     <h2 class="portfolio__title">Portfolio</h2>
                     <p class="portfolio__description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-                    <nav class="nav">
+                    <nav class="portfolio__nav">
                         <ul class="portfolio__navigation">
                             <li class="portfolio__item">
                                 <button class="portfolio__button">All</button>
@@ -70,6 +71,13 @@
 
                 </div>                
 
+            </div>
+        </section>
+
+        <!-- About us -->
+        <section class="about-us">
+            <div class="wrap">
+                
             </div>
         </section>
     </main>
