feat: add link to telephone and email

--- a/index.html
+++ b/index.html
@@ -355,11 +355,11 @@
                             </li>
                             <li class="quote__item">
                                 <i class="fas fa-phone fa-icon"></i>
-                                <p class="quote__element">03528 331 86 35</p>
+                                <a href="tel:03528 331 86 35" class="quote__element">03528 331 86 35</a>
                             </li>
                             <li class="quote__item">
                                 <i class="fas fa-envelope fa-icon"></i>
-                                <p class="quote__element">info@singolo.com</p>
+                                <a href="mailto:info@singolo.com" class="quote__element">info@singolo.com</a>
                             </li>
 
                         </ul>
