feat: add header-navigation item of Singolo-DOM-task and Portfolio Tab Switcher item of task

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
 
             <div class="header__position">
                 <a href="#" class="header__logo">singolo<span>*</span></a>
-                <nav class="header__nav">
+                <nav class="header__nav" id="menu">
                     <ul class="header__list">
                         <li class="header__item">
                             <a href="#">home</a>
                             <p class="header__dot">&#149;</p>
                         </li>
                         <li class="header__item">
-                            <a href="#">services</a>
+                            <a href="#services">services</a>
                             <p class="header__dot">&#149;</p>
                         </li>
                         <li class="header__item">
-                            <a href="#">portfolio</a>
+                            <a href="#portfolio">portfolio</a>
                             <p class="header__dot">&#149;</p>
                         </li>
                         <li class="header__item">
-                            <a href="#">about</a>
+                            <a href="#about">about</a>
                             <p class="header__dot">&#149;</p>
                         </li>
                         <li class="header__item">
-                            <a href="#">contact</a>
+                            <a href="#contact">contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -59,7 +59,7 @@
         </section>
 
         <!-- Info -->
-        <section class="info">
+        <section class="info" id="services">
             <div class="wrap">
                 <h1 class="info__title">Our Services</h1>
                 <p class="info__description">
@@ -140,7 +140,7 @@
         </section>
 
         <!-- Portfolio -->
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
             <div class="wrap">
                 <div class="position">
                     <h2 class="portfolio__title">Portfolio</h2>
@@ -161,7 +161,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="portfolio__gallery">
+                    <div class="portfolio__gallery" id='portfolio__gallery'>
                         <a href="#" class="gallery__item">
                             <img src="./assets/art1.png" alt="artwork">
                         </a>
@@ -206,7 +206,7 @@
         </section>
 
         <!-- About us -->
-        <section class="about-us">
+        <section class="about-us" id="about">
             <div class="wrap">
                 <div class="position">
                     <h2 class="about-us__title">About Us</h2>
@@ -317,7 +317,7 @@
         </section>
 
         <!-- Quote -->
-        <section class="quote">
+        <section class="quote" id="contact">
             <div class="wrap">
                 <div class="position__quote">
                     <h2 class="quote__title">Get a Quote</h2>
@@ -400,8 +400,8 @@
 
     </footer>
 
-
-    <script src="https://kit.fontawesome.com/141fb5db1e.js" crossorigin="anonymous"></script>
+    <script src="./script.js"></script>
+    <script src="https://kit.fontawesome.com/141fb5db1e.js" crossorigin="anonymous"></script>    
 </body>
 
 </html>
