feat: add slider switch and activate phone screen

--- a/index.html
+++ b/index.html
@@ -49,8 +49,31 @@
         <!-- Slider -->
         <section class="slider">
             <div class="slider__background wrap">
-                <img src="./assets/iPhone_Vertical.png" alt="image" class="slider__verticalphone">
-                <img src="./assets/iPhone_Horizontal.png" alt="image" class="slider__horizontalphone">
+                <div class="slide">
+                    <img class="phone_vertical" src="./assets/Phone.png" alt="phone_vertical">
+                    <img class="phone_horizontal" src="./assets/Phone.png" alt="phone_horizontal">  
+                    <img class="bg_vertical" src="./assets/bg_vertical.png" alt="bg_vertical">
+                    <img class="bg_horizontal" src="./assets/bg_horizontal.png" alt="bg_horizontal">
+                    <img class="bg_button-vertical" src="./assets/bg_button.png" alt="bg_button-vertical">
+                    <img class="bg_button-horizontal" src="./assets/bg_button.png" alt="bg_button-horizontal">
+                    <img class="shadow-horizontal" src="./assets/shadow-horizontal.png" alt="bg_button-horizontal">
+                    <img class="shadow-vertical" src="./assets/shadow_vertical.png" alt="bg_button-horizontal">
+                    <img class="bg_black-vertical" src="./assets/bg_black.png" alt="bg_black">
+                    <img class="bg_black-horizontal" src="./assets/bg_black.png" alt="bg_black">                    
+                </div>
+                <div class="slide">
+                    <img class="phone_right" src="./assets/phone_slide2_small.png" alt="phone_right">
+                    <img class="phone_left" src="./assets/phone_slide2_small.png" alt="phone_left">
+                    <img class="phone_center" src="./assets/phone_slide2.png" alt="phone_center">
+                    <img  class="bg_vertical-left_slide2" src="./assets/bg_vertical_slide2_small.png" alt="bg_vertical-left_slide2">
+                    <img  class="bg_vertical-right_slide2" src="./assets/bg_vertical_slide2_small.png" alt="bg_vertical-right_slide2">
+                    <img  class="bg_vertical-center_slide2" src="./assets/bg_vertical_slide2.png" alt="bg_vertical-right_slide2">
+                    <img  class="shadow-vertical_right" src="./assets/shadow_vertical_slide2_small.png" alt="shadow-vertical_right">
+                    <img  class="shadow-vertical_left" src="./assets/shadow_vertical_slide2_small.png" alt="shadow-vertical_left">
+                    <img  class="shadow-vertical_center" src="./assets/shadow_vertical_slide2.png" alt="shadow-vertical_left">
+                    <img  class="bg_button_slide2" src="./assets/bg_button.png" alt="bg_button_slide2">
+                    <img class="bg_black_slide2" src="./assets/bg_black.png" alt="bg_black_slide2"> 
+                </div>
                 <ul class="slider__list">
                     <li class="slider__item"><i class="fas fa-chevron-left"></i></li>
                     <li class="slider__item"><i class="fas fa-chevron-right"></i></li>
