--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </ul>
                     <ul class="info__line">
                         <li class="info__item">
-                            <img class="info__icon" src="./assets/Phone.png" alt="icon">
+                            <img class="info__icon" src="./assets/phone_icon.png" alt="icon">
                             <article class="info__article">
                                 <h2 class="article__title">Responsive Layout</h2>
                                 <p class="article__text">Sed porttitor placerat rhoncus. In at nunc
@@ -165,7 +165,7 @@
         <!-- Portfolio -->
         <section class="portfolio" id="portfolio">
             <div class="wrap">
-                <div class="position">
+                <div class="position-portfolio">
                     <h2 class="portfolio__title">Portfolio</h2>
                     <p class="portfolio__description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
                     <nav class="portfolio__nav">
@@ -185,40 +185,40 @@
                         </ul>
                     </nav>
                     <div class="portfolio__gallery" id='portfolio__gallery'>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art1.png" alt="artwork">
                         </a>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art2.png" alt="artwork">
                         </a>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art3.png" alt="artwork">
                         </a>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art4.png" alt="artwork">
                         </a>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art5.png" alt="artwork">
                         </a>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art6.png" alt="artwork">
                         </a>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art7.png" alt="artwork">
                         </a>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art8.png" alt="artwork">
                         </a>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art9.png" alt="artwork">
                         </a>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art10.png" alt="artwork">
                         </a>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art11.png" alt="artwork">
                         </a>
-                        <a href="#" class="gallery__item">
+                        <a class="gallery__item">
                             <img src="./assets/art12.png" alt="artwork">
                         </a>
                     </div>
@@ -352,12 +352,12 @@
                     </p>
 
                     <div class="quote__email-contact">
-                        <form class="quote__email" action="mailto:darina.talk@gmail.com" method="POST">
-                            <input class="email__item" type="text" placeholder="Name (Required)" required>
-                            <input class="email__item" type="email" placeholder="Email (Required)" required>
-                            <input class="email__item" type="email" placeholder="Subject">
-                            <textarea class="email__text" placeholder="Describe your project in detail..."></textarea>
-                            <input class="email_submit" type="submit" value="Submit"> 
+                        <form class="quote__email">
+                            <input id="quote_name" class="email__item" type="text" placeholder="Name (Required)" required>
+                            <input id="quote_email" class="email__item" type="email" placeholder="Email (Required)" required>
+                            <input id="quote_theme" class="email__item" type="text" placeholder="Subject">
+                            <textarea id="quote_describe" class="email__text" placeholder="Describe your project in detail..."></textarea>
+                            <input class="email_submit" value="Submit"> 
                         </form>
 
                         <ul class="quote__contact">
@@ -385,6 +385,15 @@
                                 <a href="mailto:info@singolo.com" class="quote__element">info@singolo.com</a>
                             </li>
 
+                        </ul>
+
+                        <ul class="quote__message">
+                            <li class="message_status">Письмо отправлено</li>
+                            <li class="message_theme"></li>
+                            <li class="message_describe"></li>
+                            <li class="message_submit">
+                                <button class="message_close">OK</button>
+                            </li>
                         </ul>
 
                     </div>
