fix: solve problem of portfolio active image

--- a/index.html
+++ b/index.html
@@ -186,40 +186,40 @@
                     </nav>
                     <div class="portfolio__gallery" id='portfolio__gallery'>
                         <a class="gallery__item">
-                            <img src="./assets/art1.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art1.png" alt="artwork">
                         </a>
                         <a class="gallery__item">
-                            <img src="./assets/art2.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art2.png" alt="artwork">
                         </a>
                         <a class="gallery__item">
-                            <img src="./assets/art3.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art3.png" alt="artwork">
                         </a>
                         <a class="gallery__item">
-                            <img src="./assets/art4.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art4.png" alt="artwork">
                         </a>
                         <a class="gallery__item">
-                            <img src="./assets/art5.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art5.png" alt="artwork">
                         </a>
                         <a class="gallery__item">
-                            <img src="./assets/art6.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art6.png" alt="artwork">
                         </a>
                         <a class="gallery__item">
-                            <img src="./assets/art7.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art7.png" alt="artwork">
                         </a>
                         <a class="gallery__item">
-                            <img src="./assets/art8.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art8.png" alt="artwork">
                         </a>
                         <a class="gallery__item">
-                            <img src="./assets/art9.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art9.png" alt="artwork">
                         </a>
                         <a class="gallery__item">
-                            <img src="./assets/art10.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art10.png" alt="artwork">
                         </a>
                         <a class="gallery__item">
-                            <img src="./assets/art11.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art11.png" alt="artwork">
                         </a>
                         <a class="gallery__item">
-                            <img src="./assets/art12.png" alt="artwork">
+                            <img class="gallery_img" src="./assets/art12.png" alt="artwork">
                         </a>
                     </div>
 
